Checked whether temp file actually exists when checking for connection errors.

Please try again whether the crash persists.

BUG:243439

svn path=/trunk/extragear/office/kmymoney/; revision=1156368